# dominion

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md
dominion/: Cargo.toml
dominion-client/: Cargo.toml
dominion-client/src/: main.rs
dominion-macros/: Cargo.toml
dominion-macros/src/: card_macros.rs  lib.rs  utils.rs
dominion-server/: Cargo.toml
dominion-server/src/: api.rs  main.rs
dominion/examples/ex1_create_game/: Cargo.toml
dominion/examples/ex1_create_game/src/: main.rs
dominion/examples/ex2_actions/: Cargo.toml
dominion/examples/ex2_actions/src/: main.rs
dominion/src/: callbacks.rs  cards.rs  error.rs  game.rs  lib.rs  main.rs  prelude.rs  sample_client.rs  types.rs  utils.rs
dominion/src/cards/: adventures.rs  alchemy.rs  all.rs  base.rs  cornucopia.rs  dark_ages.rs  dominion.rs  empires.rs  guilds.rs  hinterlands.rs  intrigue.rs  menagerie.rs  nocturne.rs  prelude.rs  prosperity.rs  renaissance.rs  seaside.rs
dominion/src/game/: callbacks.rs  card.rs  cards.rs  cso.rs  gamedata.rs  partial_game.rs  player.rs  prelude.rs  traits.rs  utils.rs
dominion/src/game/cards/: all.rs  base.rs  dominion.rs  intrigue.rs  prelude.rs
dominion/tests/: macro_test.rs  test_card.rs  test_game.rs  test_player.rs
dominion_macros/: Cargo.toml
dominion_macros/src/: card_macros.rs  lib.rs  utils.rs
examples/: Cargo.toml
examples/ex1_create_game/: Cargo.toml  main.rs
examples/ex1_create_game/src/: main.rs
examples/ex2_actions/: main.rs
examples/ex2_actions/src/: main.rs
examples/ex3_callbacks/: Cargo.toml  main.rs
examples/ex3_callbacks/src/: main.rs
macros/: Cargo.toml
macros/src/: card_macros.rs  lib.rs  utils.rs
src/: card.rs  cards.rs  error.rs  game.rs  items.rs  lib.rs  main.rs  sample_client.rs  types.rs  utils.rs
src/cards/: adventures.rs  all.rs  base.rs  dark_ages.rs  dominion.rs  empires.rs  guilds.rs  hinterlands.rs  intrigue.rs  menagerie.rs  prelude.rs  prosperity.rs  renaissance.rs
src/game/: callbacks.rs  card.rs  cards.rs  cso.rs  gamedata.rs  player.rs  prelude.rs  traits.rs  utils.rs
src/game/cards/: base.rs  dominion.rs  intrigue.rs
src/items/: cards.rs  traits.rs
src/items/cards/: base.rs  dominion.rs  intrigue.rs
src/items/traits/: card.rs
src/tests/: test_player.rs
src/traits/: card.rs
tests/: test_card.rs  test_game.rs  test_player.rs
