[package]
name = "dominion"
version = "0.1.0"
authors = ["chenkail <40770208+Chenkail@users.noreply.github.com>"]
edition = "2018"
license = "AGPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dominion_macros = { path = "macros" }

dyn-clonable = "0.9"
itertools = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
typetag = "0.1"
