[package]
name = "dominion-macros"
version = "0.1.0"
authors = ["circumspect <40770208+circumspect@users.noreply.github.com>"]
edition = "2018"
license = "AGPLv3"

[dependencies]

[dev-dependencies]
dominion = { path = "../dominion" }
serde = { version = "1.0", features = ["derive"] }
typetag = "0.1"
