[package]
name = "dominion"
version = "0.1.0"
authors = ["chenkail <40770208+Chenkail@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dominion_macros = { path = "../dominion_macros/" }
rand = "0.8.x"
thiserror = "1.0"
