[package]
name = "dominion"
version = "0.1.0"
authors = ["chenkail <40770208+Chenkail@users.noreply.github.com>"]

description = "A Rust backend library for playing Dominion"
readme = "README.md"

repository = "https://github.com/anticardgamecardgameclub/dominion"

license = "AGPLv3"

edition = "2018"

[dependencies]
dominion-macros = { path = "../dominion-macros" }

dyn-clonable = "0.9"
itertools = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
typetag = "0.1"
