[package]
name = "dominion_macros"
version = "0.1.0"
authors = ["Chenkail <40770208+Chenkail@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# proc-macro = true

[dependencies]
# paste = "1"
quote = "1.0"
